--- a/build.gradle
+++ b/build.gradle
@@ -1,31 +1,44 @@
 buildscript {
-    ext {
-        springBootVersion = '2.1.3.RELEASE'
-    }
     repositories {
         mavenCentral()
+        jcenter()
+        maven { url "https://plugins.gradle.org/m2" }
+        maven { url "https://repo.spring.io/plugins-release" }
     }
+
     dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+        classpath "org.springframework.boot:spring-boot-gradle-plugin:$spring_boot2_version"
+        classpath "gradle.plugin.com.palantir.gradle.docker:gradle-docker:0.21.0"
+    }
+}
+
+allprojects {
+    group = 'cc.before30.home'
+    version = "$baseVersion" + "$snapshotVersion"
+
+    repositories {
+        mavenCentral()
+        jcenter()
+        maven { url "http://nexus.coupang.net/content/groups/public" }
+        maven { url 'https://repo.spring.io/milestone' }
     }
 }
 
 subprojects {
+//    apply plugin: 'io.spring.dependency-management'
+    apply plugin: 'idea'
     apply plugin: 'java'
-    apply plugin: 'eclipse'
-    apply plugin: 'org.springframework.boot'
-    apply plugin: 'io.spring.dependency-management'
 
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
 
-    group = 'cc.before30'
-    version = '0.0.1-SNAPSHOT'
-    sourceCompatibility = '1.8'
-
-    repositories {
-        mavenCentral()
+    tasks.withType(JavaCompile) {
+        options.encoding = 'UTF-8'
+        options.incremental = true
+        options.compilerArgs << '-Xlint:unchecked'
     }
 
-    dependencies {
+    // Spring-boot autoconfigure
+    compileJava.dependsOn processResources
 
-    }
 }
