--- a/sample-springboot2/build.gradle
+++ b/sample-springboot2/build.gradle
@@ -1,9 +1,39 @@
+plugins {
+    id 'org.springframework.boot'
+    id 'java'
+}
+
+apply plugin: 'java'
+apply plugin: 'io.spring.dependency-management'
+apply plugin: 'com.palantir.docker'
+
+ext {
+    set('springCloudVersion', 'Greenwich.RELEASE')
+}
+
+docker {
+    dependsOn build
+    tags 'latest'
+    dockerfile file('src/main/docker/Dockerfile')
+    name "${project.group}/${bootJar.baseName}"
+    files bootJar.archivePath
+    buildArgs(['JAR_FILE': "${bootJar.archiveName}"])
+}
+
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-hystrix'
+    implementation 'io.vavr:vavr:0.10.0'
+    implementation 'io.vavr:vavr-jackson:0.10.0'
+    implementation 'io.springfox:springfox-swagger2:2.9.2'
+    implementation 'io.springfox:springfox-swagger-ui:2.9.2'
     implementation 'com.netflix.concurrency-limits:concurrency-limits-core:0.1.10'
+    implementation "org.zalando:failsafe-actuator:1.0.0"
+    implementation 'net.jodah:failsafe:2.0.1'
+
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'com.h2database:h2'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
@@ -11,6 +41,6 @@ dependencies {
 
 dependencyManagement {
     imports {
-        mavenBom "org.springframework.cloud:spring-cloud-dependencies:Finchley.SR2"
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
     }
 }
