--- a/sample-env/telegraf.conf
+++ b/sample-env/telegraf.conf
@@ -57,7 +57,7 @@ timeout = "5s"
 username = "telegraf"
 password = "secretpassword"
 
-skip_database_creation = true
+#skip_database_creation = true
 
 
 
