--- a/sample-springboot2/build.gradle
+++ b/sample-springboot2/build.gradle
@@ -33,6 +33,8 @@ dependencies {
     implementation "org.zalando:failsafe-actuator:1.0.0"
     implementation 'net.jodah:failsafe:2.0.1'
 
+    implementation group: 'io.micrometer', name: 'micrometer-registry-statsd', version: '1.1.3'
+
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'com.h2database:h2'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
