--- a/sample-springboot2/build.gradle
+++ b/sample-springboot2/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     implementation "org.zalando:failsafe-actuator:1.0.0"
     implementation 'net.jodah:failsafe:2.0.1'
 
+    implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
     implementation group: 'io.micrometer', name: 'micrometer-registry-statsd', version: '1.1.3'
 
     compileOnly 'org.projectlombok:lombok'
