--- a/home-metric-core/build.gradle
+++ b/home-metric-core/build.gradle
@@ -13,4 +13,13 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile group: 'io.micrometer', name: 'micrometer-core', version: '1.1.3'
+//    compile group: 'io.micrometer', name: 'micrometer-registry-influx', version: '1.1.3'
+    compile group: 'io.micrometer', name: 'micrometer-registry-graphite', version: '1.1.3'
+    compile group: 'io.micrometer', name: 'micrometer-registry-statsd', version: '1.1.3'
+    compile group: 'io.micrometer', name: 'micrometer-test', version: '1.1.3'
+    compile group: 'io.micrometer', name: 'micrometer-graphite-starter', version: '0.11.0.RELEASE'
+    compile group: 'io.micrometer', name: 'micrometer-registry-datadog', version: '1.1.3'
+    compile group: 'org.projectlombok', name: 'lombok', version: '1.18.6'
+
 }
